# qa_guru_python_19_mobile_2_appium

./: README.md  config.browserstack.env.example  config.py  conftest.py  pyproject.toml
qa_guru_python_20_mobile_2_appium/utils/: file.py
qa_guru_python_20_mobile_2_appium/utils/allure/: attach.py
qa_guru_python_20_mobile_2_appium/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py
tests/android/: test_wikipedia.py
typings/selene/core/: entity.pyi
