[tool.poetry]
name = "qa-guru-python-20-mobile-2-appium"
version = "0.1.0"
description = ""
authors = ["Sergey Galtsov <galtsovsergey@mail.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_20_mobile_2_appium"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0b16", allow-prereleases = true}
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
allure-pytest = "^2.12.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
appium-python-client = "^2.7.1"


[tool.pytest.ini_options]
addopts = "--alluredir allure-results --clean-alluredir"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
